update default values for router, remove namespace from values

--- a/deployment-scripts/helm-charts/deepfence-router/templates/service-agent.yaml
+++ b/deployment-scripts/helm-charts/deepfence-router/templates/service-agent.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: deepfence-router
     {{- include "deepfence-router.labels" . | nindent 4 }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   {{- with .Values.agentService.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
