--- a/deployment-scripts/helm-charts/deepfence-router/templates/ingress.yaml
+++ b/deployment-scripts/helm-charts/deepfence-router/templates/ingress.yaml
@@ -3,20 +3,25 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: deepfence-router-ingress
+  namespace: {{ .Release.Namespace }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
   ingressClassName: {{ required "ingress class name is required" .Values.ingress.class }}
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ .Values.service.name }}
-                port:
-                  number: 443
+  rules:
+  - http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: {{ .Values.service.name }}
+              port:
+                number: 443
+    {{- with .Values.ingress.host }}
+    host: {{ . }}
+    {{- end }}
 {{- end }}
 
