--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -57,7 +57,7 @@ frontend port_443
 
 backend deepfence-ui-4042
     mode http
-    server s1 ${UI_SERVICE_NAME}:4042
+    server s1 ${UI_SERVICE_NAME}:${UI_SERVICE_PORT}
 
 backend deepfence-api-9998
     mode http
@@ -84,7 +84,7 @@ backend deepfence-api-9998
     # http-response set-header Referrer-Policy "strict-origin-when-cross-origin"
     # http-response set-header Content-Security-Policy "default-src 'self'"
     # http-response set-header X-Permitted-Cross-Domain-Policies "none"
-    server s1 deepfence-api:9998
+    server s1 ${API_SERVICE_HOST}:${API_SERVICE_PORT}
 
 backend deepfence-topology-8004
     mode http
@@ -116,7 +116,7 @@ backend deepfence-topology-8004
     # http-response set-header Content-Security-Policy "default-src 'self'"
     # http-response set-header X-Permitted-Cross-Domain-Policies "none"
     # http-response set-header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, deepfence-key, x-hosts, cache-control"
-    server s1 deepfence-topology:8004
+    server s1 ${TOPOLOGY_SERVICE_HOST}:${TOPOLOGY_SERVICE_PORT}
 
 backend vulnerability-mapper-8001
     mode http
@@ -132,7 +132,7 @@ backend vulnerability-mapper-8001
     http-response set-header Cross-Origin-Resource-Policy "same-origin" unless is_dev_build
     http-response set-header Cross-Origin-Opener-Policy "same-origin" unless is_dev_build
     http-response set-header Cross-Origin-Embedder-Policy "require-corp" unless is_dev_build
-    server s1 deepfence-vulnerability-mapper:8001
+    server s1 ${VULNERABILITY_MAPPER_SERVICE_HOST}:${VULNERABILITY_MAPPER_SERVICE_PORT}
 
 backend fetcher-api-8006
     mode http
@@ -162,7 +162,7 @@ backend fetcher-api-8006
     # http-response set-header Content-Security-Policy "default-src 'self'"
     # http-response set-header X-Permitted-Cross-Domain-Policies "none"
     # http-response set-header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, deepfence-key, x-hosts, cache-control"
-    server s1 deepfence-fetcher:8006
+    server s1 ${FETCHER_SERVICE_HOST}:${FETCHER_SERVICE_PORT}
 
 backend options_method_handler
     mode http
