create secret under k8s-scanner set to false

--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -97,5 +97,6 @@ deepfence-k8s-scanner:
   managementConsolePort: *managementConsolePort
   deepfenceKey: *deepfenceKey
   clusterName: *clusterName
+  createDeepfenceKeySecret: false
   image:
     tag: "1.0.0"
