--- a/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/es_secrets.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/es_secrets.yaml
@@ -1,16 +1,19 @@
-{{- if and .Values.db.elasticsearch.user .Values.db.elasticsearch.password }}
-apiVersion: v1
-data:
-  es_user: {{ .Values.db.elasticsearch.user | b64enc }}
-  es_password: {{ .Values.db.elasticsearch.password | b64enc }}
-  {{- if .Values.saas_deployment }}
-  es_customer_unique_id: {{ .Release.Namespace | b64enc }}
-  {{- end }}
 kind: Secret 
+apiVersion: v1
 metadata:
   name: "es-secret-{{ include "deepfence-console.fullname" . }}"
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "deepfence-console.labels" . | nindent 4 }}
 type: Opaque
-{{- end }}
+data:
+  es_scheme: {{ .Values.db.elasticsearch.scheme | b64enc }}
+  es_host: {{ .Values.db.elasticsearch.host | b64enc }}
+  es_port: {{ .Values.db.elasticsearch.port | default "9200" | quote | b64enc }}
+  {{- if and .Values.db.elasticsearch.user .Values.db.elasticsearch.password }}
+  es_user: {{ .Values.db.elasticsearch.user | b64enc }}
+  es_password: {{ .Values.db.elasticsearch.password | b64enc }}
+  {{- end }}
+  {{- if .Values.saas_deployment }}
+  es_customer_unique_id: {{ .Release.Namespace | b64enc }}
+  {{- end }}
