--- a/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
@@ -108,18 +108,18 @@ spec:
                   key: pg_ssl_mode
             - name: ELASTICSEARCH_HOST
               valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
-                  key: elasticsearch_host
+                secretKeyRef:
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
+                  key: es_host
             - name: ELASTICSEARCH_PORT
               valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
-                  key: elasticsearch_port
+                secretKeyRef:
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
+                  key: es_port
             - name: ELASTICSEARCH_SCHEME
               valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
+                secretKeyRef:
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_scheme
             {{- if .Values.db.elasticsearch.user }}
             - name: ELASTICSEARCH_USER
@@ -144,14 +144,14 @@ spec:
             {{- end }}
             - name: REDIS_HOST
               valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
-                  key: redis_host
+                secretKeyRef:
+                  name: "redis-secret-{{ include "deepfence-console.fullname" . }}"
+                  key: host
             - name: REDIS_PORT
               valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
-                  key: redis_port
+                secretKeyRef:
+                  name: "redis-secret-{{ include "deepfence-console.fullname" . }}"
+                  key: port
           resources:
             {{- toYaml .Values.backend.resources | nindent 12 }}
           ports:
