--- a/deployment-scripts/helm-charts/deepfence-console/templates/packagescanner/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/packagescanner/deployment.yaml
@@ -43,7 +43,7 @@ spec:
             - name: CUSTOMER_UNIQUE_ID
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
+                  name: es-secret-{{ include "deepfence-console.fullname" . }}
                   key: es_customer_unique_id
             {{- end }}
           ports:
