--- a/deployment-scripts/helm-charts/deepfence-console/templates/secretscanner/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/secretscanner/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - name: CUSTOMER_UNIQUE_ID
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
+                  name: es-secret-{{ include "deepfence-console.fullname" . }}
                   key: es_customer_unique_id
           {{- end }}
           args: ["-config-path", "/home/deepfence/usr", "-http-port", "8011"]
