remove quotes from ports env vars

--- a/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/es_secrets.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/es_secrets.yaml
@@ -9,7 +9,7 @@ type: Opaque
 data:
   es_scheme: {{ .Values.db.elasticsearch.scheme | b64enc }}
   es_host: {{ .Values.db.elasticsearch.host | b64enc }}
-  es_port: {{ .Values.db.elasticsearch.port | default "9200" | quote | b64enc }}
+  es_port: {{ .Values.db.elasticsearch.port | default 9200 | b64enc }}
   {{- if and .Values.db.elasticsearch.user .Values.db.elasticsearch.password }}
   es_user: {{ .Values.db.elasticsearch.user | b64enc }}
   es_password: {{ .Values.db.elasticsearch.password | b64enc }}
