--- a/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/redis_secrets.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/redis_secrets.yaml
@@ -8,4 +8,4 @@ metadata:
 type: Opaque
 data:
   host: {{ .Values.db.redis.host | b64enc }}
-  port: {{ .Values.db.redis.port | default "6379" | quote | b64enc}}
+  port: {{ .Values.db.redis.port | default 6379 | b64enc}}
