simplify custom tls certificate configuration
https://github.com/deepfence/ThreatMapper/issues/663

--- a/deployment-scripts/helm-charts/deepfence-console/templates/internalrouter/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/internalrouter/deployment.yaml
@@ -68,19 +68,9 @@ spec:
             - name: OPERATING_MODE
               value: "k8s"
           volumeMounts:
-          {{- if .Values.tls.pemfile }}
-            - name: deepfence-cert-volume
-              mountPath: /usr/local/etc/haproxy/deepfence.pem
-              subPath: deepfence.pem
-          {{- end }}
-          {{- if and .Values.tls.certFile .Values.tls.keyFile }}
-          - name: deepfence-ui-ssl-cert-file
-            mountPath: /etc/deepfence/certs/deepfence.crt
-            subPath: deepfence.crt
-            readOnly: true
-          - name: deepfence-ui-ssl-key-file
-            mountPath: /etc/deepfence/certs/deepfence.key
-            subPath: deepfence.key
+          {{- if or .Values.tls.secretName (and .Values.tls.cert .Values.tls.key) }}
+          - name: certs
+            mountPath: /etc/deepfence/certs
             readOnly: true
           {{- end }}
           ports:
@@ -108,16 +98,12 @@ spec:
       {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-      {{- if .Values.tls.pemfile }}
-        - name: deepfence-cert-volume
-          configMap:
-            name: deepfence-cert
-      {{- end }}
-      {{- if and .Values.tls.certFile .Values.tls.keyFile }}
-      - name: deepfence-ui-ssl-cert-file
-        configMap:
-          name: deepfence-ui-ssl-cert
-      - name: deepfence-ui-ssl-key-file
-        configMap:
-          name: deepfence-ui-ssl-cert
+      {{- if .Values.tls.secretName }}
+      - name: certs
+        secret:
+          secretName: {{ .Values.tls.secretName }}
+      {{- else if and .Values.tls.cert .Values.tls.key }}
+      - name: certs
+        secret:
+          secretName: deepfence-ui-ssl-cert
       {{- end }}
