--- a/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/on-prem-ssl-cert.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/on-prem-ssl-cert.yaml
@@ -1,23 +1,16 @@
-{{- if and .Values.tls.certFile .Values.tls.keyFile }}
-{{- $certFile := .Files.Get .Values.tls.certFile }}
-{{- if not $certFile }}
-{{- fail "SSL certificate file not found. It should be there in the unpacked chart directory." }}
-{{- end }}
-{{- $keyFile := .Files.Get .Values.tls.keyFile }}
-{{- if not $keyFile }}
-{{- fail "SSL key file not found. It should be there in the unpacked chart directory." }}
-{{- end }}
+{{- if and .Values.tls.cert .Values.tls.key }}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: deepfence-ui-ssl-cert
   labels:
     app: deepfence-console
     {{- include "deepfence-console.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
+type: kubernetes.io/tls
 data:
-  deepfence.crt: |-
-{{ .Files.Get .Values.tls.certFile | indent 4}}
-  deepfence.key: |-
-{{ .Files.Get .Values.tls.keyFile | indent 4}}
+  tls.crt: |-
+{{ .Values.tls.cert | b64enc | indent 4}}
+  tls.key: |-
+{{ .Values.tls.key | b64enc | indent 4}}
 {{- end }}
